# unclog

./: CHANGELOG.md  Cargo.toml  README.md
.changelog/: config.toml
.changelog/unreleased/breaking-changes/: 12-positional-args.md  13-entry-autogen.md  51-default-build-released-entries.md  558-tm10011.md  60-release-version-flag.md
.changelog/unreleased/bug-fixes/: 38-escape-hash-sign.md
.changelog/unreleased/enhancements/: 153-condense-find-dups-output.md
.changelog/unreleased/features/: 149-local-dup-detection.md  37-add-gitlab-support.md  47-prologue.md  6-add-component-flag.md
.changelog/v0.1.0/: summary.md
.changelog/v0.1.1/: summary.md
.changelog/v0.1.1/improvements/: 1-fix-formatting.md
.changelog/v0.2.0/: summary.md
.changelog/v0.2.0/breaking-changes/: 2-entry-groups.md
.changelog/v0.2.0/features/: 004-build-unreleased.md
.changelog/v0.2.1/: summary.md
.changelog/v0.3.0/: summary.md
.changelog/v0.3.0/breaking-changes/: 2-hyphens.md
.changelog/v0.4.0/: summary.md
.changelog/v0.4.1/: summary.md
.changelog/v0.4.1/bug-fixes/: 19-component-name.md
.changelog/v0.5.0/: summary.md
.changelog/v0.5.0/breaking-changes/: 23-component-cfg.md
.changelog/v0.5.1/: summary.md
.changelog/v0.5.1/bug-fixes/: 38-escape-hash-sign.md
.changelog/v0.5.2/: summary.md
.changelog/v0.5.2/improvements/: 44-aarch64-macos-linux.md
.changelog/v0.6.0/: summary.md
.changelog/v0.6.0/dependencies/: 49-switch-to-clap.md
.changelog/v0.7.0/: summary.md
.changelog/v0.7.0/features/: 147-sort-changelog-entries.md  148-sort-releases-by-date.md
.changelog/v0.7.1/: summary.md
.changelog/v0.7.2/: summary.md
.changelog/v0.7.3/: summary.md
.github/workflows/: build.yml  changelog.yml  check-build-release.yml  release.yml  rust.yml  security.yml
src/: cargo.rs  changelog.rs  error.rs  fs_utils.rs  input.rs  lib.rs  project.rs  s11n.rs  vcs.rs
src/changelog/: change_set.rs  change_set_section.rs  component.rs  component_section.rs  config.rs  entry.rs  entry_path.rs  fs_utils.rs  parsing_utils.rs  release.rs
src/s11n/: from_str.rs
tests/: integration.rs
tests/full/: config.toml  epilogue.md  expected-released-only.md  expected-sorted-by-entry-text.md  expected-sorted-by-release-date.md  expected.md  prologue.md
tests/full/unreleased/features/: 45-travel.md
tests/full/unreleased/improvements/: 43-eat-profile.md
tests/full/v0.1.0/: summary.md
tests/full/v0.1.1/: summary.md
tests/full/v0.1.1/bug-fixes/: 123-some-emergency-patch.md
tests/full/v0.2.0/: summary.md
tests/full/v0.2.0-alpha/: summary.md
tests/full/v0.2.0-alpha/breaking-changes/: 23-brown-drops.md  25-tick-effect.md  26-eat-resort.md
tests/full/v0.2.0-alpha/improvements/: 21-hover-historian.md
tests/full/v0.2.0-beta/: summary.md
tests/full/v0.2.0-beta/features/: 30-balance-garbage.md  33-spark-char.md
tests/full/v0.2.0-beta/improvements/: 31-fan-shoe.md
tests/full/v0.2.0/breaking-changes/: 41-tune-disaster.md  42-educate-specialist.md
tests/full/v0.2.0/features/: 39-stir-engineer.md  40-attend-entry.md
tests/full/v0.2.1/: summary.md
tests/full/v0.2.1/breaking-changes/component2/: 73-gargle.md  76-travel.md  80-laugh.md
tests/full/v0.2.1/features/: 41-nibble.md  42-carry.md
tests/full/v0.2.1/features/component1/: 44-fasten.md  45-hasten.md
tests/full/v0.2.1/features/component2/: 50-waggle.md  53-drizzle.md
