[package]
name = "unclog"
version = "0.4.1"
authors = ["Thane Thomson <thane@informal.systems>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/informalsystems/unclog"
repository = "https://github.com/informalsystems/unclog"
readme = "README.md"
categories = ["development-tools"]
keywords = ["changelog", "markdown"]
description = """
    unclog allows you to build your changelog from a collection of independent
    files. This helps prevent annoying and unnecessary merge conflicts when
    collaborating on shared codebases.
    """

[[bin]]
name = "unclog"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["simplelog", "structopt", "tempfile"]

[dependencies]
git2 = "0.13.22"
handlebars = "4.1.3"
log = "0.4.14"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.14.2"
thiserror = "1.0"
toml = "0.5"
url = "2.2"

simplelog = { version = "0.10", optional = true }
structopt = { version = "0.3.21", optional = true }
tempfile = { version = "3.2.0", optional = true }

[dev-dependencies]
env_logger = "0.8.3"
lazy_static = "1.4.0"
