[package]
name = "unclog"
version = "0.7.1"
authors = ["Thane Thomson <thane@informal.systems>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/informalsystems/unclog"
repository = "https://github.com/informalsystems/unclog"
readme = "README.md"
categories = ["development-tools"]
keywords = ["changelog", "markdown"]
description = """
unclog allows you to build your changelog from a collection of independent
files. This helps prevent annoying and unnecessary merge conflicts when
collaborating on shared codebases."""

[[bin]]
name = "unclog"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["simplelog", "clap", "tempfile"]

[dependencies]
git2 = "0.18"
handlebars = "5.1"
log = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
thiserror = "1.0"
toml = "0.8"
url = "2.5"

simplelog = { version = "0.12", optional = true }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
tempfile = { version = "3.9", optional = true }
chrono = "0.4.33"
comfy-table = "7.1.0"

[dev-dependencies]
env_logger = "0.10"
lazy_static = "1.4"
